# synaptic-flow

./: CLAUDE.md  GEMINI.md  README.md  agents.md  dump_log.sh  package.json  pnpm-lock.yaml  refactoring_plan_submission_guide.md
.github/: copilot-instructions.md
docs/architecture/: browser-tool-injection-review.md  chat-feature-architecture.md  content-store-rust-migration-plan.md
docs/guides/: architecture-documentation-guide.md
docs/history/: refactoring_20250904_1000.md  refactoring_20250904_1630.md  refactoring_20250904_1800.md  refactoring_20250905_0650.md  refactoring_20250905_1145.md  refactoring_20250920_1517.md  refactoring_20250920_1520.md  refactoring_20250920_1830.md  refactoring_20250920_1830_implementation.md  refactoring_20250921_2100_clean.md  refactoring_20250927_1625.md  refactoring_20250928_0013.md
src-tauri/: Cargo.toml  test_file_20250904_123437.txt
src-tauri/src/: lib.rs  main.rs  session.rs
src-tauri/src/commands/: browser_commands.rs  mcp_commands.rs
src-tauri/src/mcp/: schema.rs  server.rs  server_utils.rs  types.rs
src-tauri/src/mcp/builtin/: mod.rs  utils.rs
src-tauri/src/mcp/builtin/content_store/: mod.rs  parsers.rs  search.rs  storage.rs  utils.rs
src-tauri/src/mcp/builtin/workspace/: code_execution.rs  export_operations.rs  file_operations.rs  mod.rs  ui_resources.rs  utils.rs
src-tauri/src/mcp/builtin/workspace/tools/: code_tools.rs  export_tools.rs  file_tools.rs  mod.rs
src-tauri/src/services/: interactive_browser_server.rs  secure_file_manager.rs
src/app/: App.tsx
src/context/: ChatContext.tsx  DnDContext.tsx  (+1 more)
(+54 files in other folders)
