[package]
name = "tauri-mcp-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_mcp_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
rmcp = { version = "0.6.4", features = ["client", "transport-child-process"] }
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-dialog = "2"
path-clean = "1.0"
tempfile = "3.22"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
glob = "0.3"
sha2 = "0.10"
html-escape = "0.2"
warp = "0.3"
dashmap = "5.5"
regex = "1"
cuid2 = "0.1.4"
dirs = "5.0"
zip = "0.6"
